--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <DOCTYPE.html> 
-  <html> <head> <title> myfirstwe3bsite</title></head>
-    <body>
+<html> 
+    <head> 
+      <title> myfirstwe3bsite </title>
+    </head>
+  <body>
       
       
-    </body>
-  </html>
+  </body>
+  
+</html>
