--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <title> myfirstwe3bsite </title>
     </head>
   <body>
-      
+      <hi> V Squared Home Services
+     </h1>
       
   </body>
-  
+   
 </html>
