--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
   <body>
       <hi> V Squared Home Services
+       <h2> Always gooing the extra mile </h2>
           
      </h1>
       
