--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <DOCTYPE:html>
   <html>
 <head> 
-  <title> My First Website
-  </title>
- <link  href="styles.css">
+  <title>My First Website</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 
     <body>
-      
-      <img src="https://unsplash.com/photos/EPy0gBJzzZU>
-
+      <header> 
+        <h1>V Squared Home Services</h1>
+      </header>
     <nav>
 
       <a href="https://rveve2012.wixsite.com/mysite-1/">Sign Up</a>
