--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
       <header> 
         <h1>V Squared Home Services</h1></header>
         <main>
-          <img src=""
-          About us and what the services that we offer:
+          <section>
+          <img src="https://images.unsplash.com/photo-1616281677557-a40d9d9ece5e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
+          </section>
+        </main>
+
+        <h2> About us and what the services that we offer:</h2>
     
-         <h2>ABOUT</h2>
-          V Squared Home Services e is known for its eco-friendly, quality landscaping that our clients from Everett to Vancouver appreciate and trust. From small, neighborhood gardens to sprawling lawns and commercial spaces, we approach every project with care and meticulous detail. We believe in building lasting relationships with our clients, getting to know them and their personal style so that we can best bring their vision to life
+         ABOUT 
+
+          V Squared Home Services are known for its eco-friendly, quality landscaping that our clients from Everett to Vancouver appreciate and trust. From small, neighborhood gardens to sprawling lawns and commercial spaces, we approach every project with care and meticulous detail. We believe in building lasting relationships with our clients, getting to know them and their personal style so that we can best bring their vision to life
 
         </main>
         
