--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>V Squared Home Services</h1></header>
         <main>
           <section>
-          <img src="https://images.unsplash.com/photo-1616281677557-a40d9d9ece5e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
+          <image src="https://images.unsplash.com/photo-1616281677557-a40d9d9ece5e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"> </image>
           </section>
         </main>
 
