--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     
          ABOUT 
 
-          V Squared Home Services are known for its eco-friendly, quality landscaping that our clients 
-          from Everett to Vancouver appreciate and trust. From small, neighborhood gardens to sprawling lawns and 
-          commercial spaces, we approach every project with care and meticulous detail. We believe in building lasting relationships
-          with our clients, getting to know them and their personal style so that we can best bring their vision to life
+          V Squared Home Services are known for its eco-friendly, quality landscaping 
+          that our clients from Everett to Vancouver appreciate and trust. From small, 
+          neighborhood gardens to sprawling lawns and commercial spaces, we approach every 
+          project with care and meticulous detail. We believe in building lasting relationships
+          with our clients, getting to know them and their personal style so that we can best 
+          bring their vision to life.
 
         </main>
         
