--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         </main>
 
         <h1> About us and what the services that we offer: </h1>
+  <ul>
+    <ol>
+      1. Property Maintenance
+      2. Landscapingand Lawn Maintenance
+      3. Indoor Clening
     
          ABOUT 
 
