--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
       <header> 
-        V Squared Home Services </header>
+        <h1> V Squared Home Services </h1>
+  </header>
         <main>
          
         </main>
