--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
       <a href="https://rveve2012.wixsite.com/mysite-1/"> Email Newsletter</a>
      </nav>
+             <section> 
+               <image src="https://https://images.unsplash.com/photo-1669158424156-01778fcc6427?ixlib=rb-4.0.
+                         3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2024&q=80"> </image>
+      </section>
     </footer>
   
   </body>
