--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
       </nav>
 
       <section> 
-        <img src="zeynep-sumer-GGM0pQR_6K0-unsplash.jpg">
-">
-        </image>
+        <image src="zeynep-sumer-GGM0pQR_6K0-unsplash.jpg"</image>
 
       <section> 
-        <img src="https://https://images.unsplash.com/photo-1669158424156-01778fcc6427?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2024&q=80"> </image>
+        <image src="Botanical Garden .jpg"> </image>
 
       </section>
 
