--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    
     <title> My First Website </title>
    
+   <link rel="script" script.js>
+   
     <link rel="stylesheet" href="style.css">
    
   </head>
