--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
    
     <title> My First Website </title>
    
-   <link rel="script" script.js>
-   
     <link rel="stylesheet" href="style.css">
    
   </head>
       <h1>V Squared Home Services</h1>
-    </header>
+      <script src="script.js"> </script>
+      <script> sayHi ()
+               userName ()
+
+</header>
 
    <h2>About us and what the services that we offer:</h1>
 
