--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title> My First Website </title>
    
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"> </script>
    
   </head>
+
+<header> 
       <h1>V Squared Home Services</h1>
-      <script src="script.js"> </script>
+     
       <script> sayHi ()
                userName ()
+
 
 </header>
 
