--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 <header> 
       <h1>V Squared Home Services</h1>
      
-      <script> sayHi ()
-               userName ()
+    
 
 
 </header>
+
+<body> 
+
+         <script> sayHi ()
+               userName ()
 
    <h2>About us and what the services that we offer:</h1>
 
@@ -39,7 +43,7 @@
 
     </main>
 
-
+</body> 
     <footer>
       <nav>
 
