--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
 <header> 
       <h1>V Squared Home Services</h1>
      
-    
+      <script> sayHi () ;
+               userName () ;
 
 
 </header>
-
-<body> 
-
-         <script> sayHi ()
-               userName ()
 
    <h2>About us and what the services that we offer:</h1>
 
@@ -43,7 +39,7 @@
 
     </main>
 
-</body> 
+
     <footer>
       <nav>
 
@@ -55,6 +51,7 @@
 
       <section> 
         <image src="zeynep-sumer-GGM0pQR_6K0-unsplash.jpg"</image>
+        </section
 
       <section> 
         <image src="Botanical Garden .jpg"> </image>
@@ -65,4 +62,3 @@
 
 
   </html>
-
