--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
     <title> My First Website </title>
    
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"> </script>
+   
    
   </head>
-
-<header> 
-      <h1>V Squared Home Services</h1>
-     
-      <script> sayHi () ;
+  <body>
+   <script src="script.js"> </script>
+   <script> sayHi () ;
                userName () ;
+               
+               <h1> V Squared Home Services </h1>
 
-
-</header>
-
-   <h2>About us and what the services that we offer:</h1>
+ <h2>About us and what the services that we offer:</h1>
 
   <ul> <li>
             1. Propeerty Maintennance 
@@ -37,9 +34,9 @@
       lasting relationships with our clients, getting to know them and their personal
       style so that we can best bring their vision to life
 
-    </main>
+  
 
-
+</body>
     <footer>
       <nav>
 
