--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   </head>
   <body>
    <script src="script.js"> </script>
-   <script> sayHi () ;
-               userName () ;
+   <script> 
+   sayHi ();
+               userName ();
+   </script>
+
                
                <h1> V Squared Home Services </h1>
 
