--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
    <script src="script.js"> </script>
-   <script> 
-   sayHi ();
-               userName ();
+   <script>pageWelcome();
    </script>
 
                
