--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
    
     <title> My First Website </title>
    
-   <link rel="script" script.js>
+   <script src="script.js"></script>
    
     <link rel="stylesheet" href="style.css">
    
   </head>
       <h1>V Squared Home Services</h1>
     </header>
-
+<body>
    <h2>About us and what the services that we offer:</h1>
 
   <ul> <li>
@@ -31,7 +31,7 @@
       lasting relationships with our clients, getting to know them and their personal
       style so that we can best bring their vision to life
 
-    </main>
+    </body>
 
 
     <footer>
