--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
    
     <title> My First Website </title>
    
-
-   
-    <link rel="stylesheet" href="style.css">
-   
+   <link rel="stylesheet" href="style.css">
+     <script src="script.js"></script>
+     <script> welcomePrompt()
+               yesOrNo()
    
   </head>
       <h1>V Squared Home Services</h1>
@@ -23,7 +23,7 @@
 
   <ul> <li>
             1. Property Maintennance 
-            2. <a href= "Lanscape Design and Maintenance" src="https://rveve2012.wixsite.com/mysite-1/"></a>
+            2. <a href= "Lanscape Design and Maintenance" src="https://rveve2012.wixsite.com/mysite-1/">Landscape Designand Maintenance</a>
             3. Indoor Cleaaning & Maintenance 
        </li>
   
