--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="script.js"></script>
   <script> welcomePrompt()
           yesOrNo()
+          changeMind() 
   </script>
    <h2>About us and what the services that we offer:</h1>
 
