--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title> My First Website </title>
    
    <link rel="stylesheet" href="style.css">
-     <script src="script.js"></script>
-     <script src="script.js"></script>
-  <script> welcomePrompt()
-          yesOrNo()
-          changeMind()  
+   
+   <script src="script.js"></script>
+   
+   <script> welcomePrompt()
+   
+            yesOrNo()
+   
+            changeMind() 
+   
+   </script> 
     
   </head>
       <h1>V Squared Home Services</h1>
