--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
    <script src="script.js"></script>
    
-   <script> welcomePrompt()
+   <script> welcomePrompt () ;
    </script> 
     
   </head>
@@ -22,7 +22,7 @@
 
   <ul> <li>
             1. Property Maintennance 
-            2. <a href= "Lanscape Design and Maintenance" src="https://rveve2012.wixsite.com/mysite-1/">Landscape Designand Maintenance</a>
+            2. <a href= src="https://rveve2012.wixsite.com/mysite-1/"Landscape Designand Maintenance></a>
             3. Indoor Cleaaning & Maintenance 
        </li>
   
