--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
    
    <script src="script.js"></script>
    
-   <script> welcomePrompt () ;
+   <script> welcomePrompt ()
+            yesOrNo ()
+            changeMind ()
+            howManyPictures () ;
    </script> 
     
   </head>
