--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <ul> <li>
             1. Property Maintennance 
-            2. <a href= src="https://rveve2012.wixsite.com/mysite-1/"Landscape Designand Maintenance></a>
+            2. <a href= src="https://rveve2012.wixsite.com/mysite-1/">Landscape Designand Maintenance</a>
             3. Indoor Cleaaning & Maintenance 
        </li>
   
