--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
    <h2>About us and what the services that we offer:</h1>
 
   <ul> 
-    <li>  1.<a href= src="https://rveve2012.wixsite.com/mysite-1/">Property Maintennance</a> 
+    <li>  1.<a href="https://rveve2012.wixsite.com/mysite-1/">Property Maintennance</a> 
     </li>
-     <li> 2. <a href= src="https://rveve2012.wixsite.com/mysite-1/">Landscape Designand Maintenance</a>
+     <li> 2. <a href="https://rveve2012.wixsite.com/mysite-1/">Landscape Designand Maintenance</a>
     </li>
-       <li>  3. <a href= src="https://rveve2012.wixsite.com/mysite-1/">Indoor Cleaaning & Maintenance</a> 
+       <li>  3. <a href="https://rveve2012.wixsite.com/mysite-1/">Indoor Cleaaning & Maintenance</a> 
        </li>
   
   </ul>
