--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <h1>V Squared Home Services</h1>
     </header>
 <body>
+  <script>  
+         msg () ;
+</script>  
+<input type="button" onclick="msg()" value="call function"/> 
         
    <h2>About us and what the services that we offer:</h1>
 
