--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script>  
          msg () ;
 </script>  
-<input type="button" onclick="msg()" value="call function"/> 
+<input type="button" onclick="msg()" value="PUSH ME"/> 
         
    <h2>About us and what the services that we offer:</h1>
 
