--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 <body>
   <script>  
-         msg () ;
+        myFunction () ;
 </script>  
 <input type="button" onclick="msg()" value="PUSH ME"/> 
         
