--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 <body>
   <script>  
-        myFunction () ;
+        msg () ;
 </script>  
 <input type="button" onclick="msg()" value="PUSH ME"/> 
         
