--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
 <body>
   <script>  
-        msg () ;
+    msg () ;
+    welcomeMsg () ;
 </script>  
 <input type="button" onclick="msg()" value="PUSH ME"/> 
         
